fix button nav z-index

--- a/source/stylesheets/custom.css.scss
+++ b/source/stylesheets/custom.css.scss
@@ -44,6 +44,7 @@ $height_contact: 36px;
   height: $height_contact;
   width: 100%;
   background-color: white;
+  z-index: 1000
 }
 
 .sh_deliver {
